Bug 470439 - The problem when the space is the thousands separator in the regional settings
Summary: The problem when the space is the thousands separator in the regional settings
Status: RESOLVED FIXED
Alias: None
Product: Kalk
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: hanyoung
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-30 07:22 UTC by Slava
Modified: 2023-05-31 16:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The bug with space as a thousands separator (20.32 KB, image/png)
2023-05-30 07:22 UTC, Slava
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Slava 2023-05-30 07:22:33 UTC
Created attachment 159341 [details]
The bug with space as a thousands separator

If the number format with a space as a thousands separator is selected in the regional settings, the calculator treats integers as separate

STEPS TO REPRODUCE
1. Set a space as a thousands separator in the regional settings
2. Just start typing a number greater than 1000 into the calculator
3. Only the last 3 digits of the number will be accepted

OBSERVED RESULT
Only the last 3 digits in numbers greater than 1000 will be accepted

EXPECTED RESULT
Space inside numbers must be suppressed

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.3.1-arch1-1 (64-bit)
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Comment 1 Bug Janitor Service 2023-05-31 16:55:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kalk/-/merge_requests/62
Comment 2 hanyoung 2023-05-31 16:58:17 UTC
Git commit be525ebe2aac0ec186762b4cffc65bd91ab46789 by Han Young.
Committed on 31/05/2023 at 16:58.
Pushed by hanyoung into branch 'master'.

fix parse bug for locales using space group separator

@mlang

M  +6    -0    src/inputmanager.cpp

https://invent.kde.org/utilities/kalk/-/commit/be525ebe2aac0ec186762b4cffc65bd91ab46789