fix parse bug for locales using space group separator

BUG: 470439

@mlang